# playGround

./: .gitignore  .goosehints  README.md  _build_plan.py  gen_spec.py  pyproject.toml  requirements.txt  write_spec.py
.github/workflows/: ci.yml
docs/: 05_test_strategy.md  review_result.json  summary.md
docs/artifacts/: Classification.md  Configuration_Management_Plan.md  Development_Plan.md  IntendedUse.md  RMR.md  Risk_Management_Plan.md  SAD.md  SAD_part1.md  SAD_part2.md  SDS.md  SRS.md  Security_Maintenance_Plan.md  SyRS.md  SystemRequirement.md  _draft_context.md  _gen_srs_list.py  classification_list.json  development_plan_list.json  dicom_parser_code_review.json  sad_list.json  srs_list.json  syrs_list.json
docs/progress/: session_context.md
docs/spec-kit/: 01_spec.md  02_plan.md  03_tasks.md  _p1.py  _s1.py  implementation_plan.md
src/: __init__.py
src/checkers/: __init__.py
src/reviewers/: __init__.py
src/utils/: models.py  parser.py
tests/unit/: test_parser.py
viewer/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
viewer/src/: main.js
viewer/src/business/: index.js
viewer/src/data/: dicomDictionary.js  index.js
viewer/src/errors/: CBVError.js  handleParseError.js  index.js
viewer/src/styles/: main.css
viewer/src/types/: DICOMMetadata.js  MeasurementData.js  ParseResult.js  SliceData.js  ValidationResult.js  ViewTransform.js  VolumeData.js  index.js
viewer/tests/: dicomDictionary.test.js  setup.js  unit.test.js
viewer/tests/helpers/: dicomFixtureBuilder.js
(+29 files in other folders)
